2008-07-06  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Added Korean document translation.
	* docs/Makefile.am: Added ko to DOC_LINGUAS.

2008-04-11  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Fix the launching of the
	gnome-keyboard-properties dialog. Patch from Matthias Clasen (bug
	#517500).

2008-03-02  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (dialog_cb): Make allowance for the disappearance of
	gnome-accessibility-keyboard-properties and its movement to
	gnome-keyboard-properties. (Bug #517500.)

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* GNOME_AccessxStatusApplet.server.in.in:
	Fix bugzilla component and add missing line to make bug buddy
	work for this applet. Reported by Matthias Clasen.
	Closes bug #425003.

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_AccessxApplet.xml: use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* applet.c: (about_cb), (create_applet),
	(accessx_status_applet_destroy), (accessx_status_applet_fill):
	* applet.h: Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/accessx-status.xml: Fix build.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* applet.c: Remove mention of the word 'capplet'. Closes #168789.

2005-08-04  Davyd Madeley  <davyd@madeley.id.au>

	* applet.c: GtkAboutDialog stuff

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

        * docs/Makefile.am:
        * docs/accessx-status.omf.in: gnome-doc-util-ise

        * docs/*: Remove lots of unwanted files. XML files still need
                  converting to po files.

2005-07-03  Kjartan Maraas  <kmaraas@gnome.org>
