@@ -1,3 +1,9 @@
+2008-09-09  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (accessx_status_applet_get_glyph_pixbuf): Patch from
+	Matt Keenan to avoid a crash when a colormap isn't present. (Bug
+	#549722)
+
 2008-07-06  Changwoo Ryu  <cwryu@debian.org>
 
 	* docs/ko/ko.po: Added Korean document translation.
